--- a/app/src/main/res/layout/fragment_ipac_game.xml
+++ b/app/src/main/res/layout/fragment_ipac_game.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragment_ipacgame_ingame">
@@ -10,7 +10,8 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical"
-        android:background="@color/colorWhite">
+        android:background="@color/colorWhite"
+        tools:ignore="UselessParent">
 
     <TextView
         android:id="@+id/main_number_try"
@@ -35,8 +36,7 @@
         android:hint="@string/number_type"
         android:textSize="30sp"
         android:inputType="number"
-        android:maxLength="3"
-        />
+        android:maxLength="3" />
 
     <Space
         android:layout_width="match_parent"
