--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -17,7 +17,8 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/mds_logo" />
+        android:src="@drawable/mds_logo"
+        android:contentDescription="@string/app_name" />
 
     <Space
         android:layout_width="match_parent"
