--- a/app/src/main/res/layout/fragment_settings_row.xml
+++ b/app/src/main/res/layout/fragment_settings_row.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/show_score"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_gravity="center_horizontal"
     tools:context=".ShowScoreRow">
